src/features/user/CompleteSignup/CompleteSignup.module.scss
@import './../../../theme/theme';

// entire page
.signUpPage {
  min-height: 100vh;
  display: flex;
  position: relative;
  background-size: cover;
  display: flex;
  flex-direction: column;
  overflow-y: auto;
  // min-height: calc(100vh - 150px);
}

// the white form
.signup {
  top: 100px;
  margin-bottom: 60px;
  position: absolute;
  border: 0px;
  min-width: 320px;
  max-width: 420px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border-radius: 8px;
  align-self: center;
  padding: 20px;
  // min-height: calc(100vh - 150px);
  z-index: 100;
}

// when request sent, opacity low
.signupRequestSent {
  background-color: $light;
  position: absolute;
  border: 0px;
  min-width: 320px;
  max-width: 420px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border-radius: 8px;
  align-self: center;
  padding: 20px 20px;
  margin-top: 100px;
}

.header {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
  margin-bottom: 10px;
}

.headerBackIcon {
  height: 32px;
  width: 32px;
  justify-content: center;
  align-items: center;
  display: flex;
  > svg {
    width: 16px;
  }
}
.headerBackIcon:hover {
  cursor: pointer;
}

.headerTitle {
  font-family: $primaryFontFamily;
  font-weight: bold;
  font-size: 27px;
  color: $primaryFontColor;
  margin-left: 10px;
}

// private account div
.isPrivateAccountDiv {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
  justify-content: space-between;
  margin: 10px 5px 6px 5px;
  padding: 0px 10px;
}

.mainText {
  font-family: $primaryFontFamily;
  font-size: $fontSmall;
  color: $highlightBackground;
  font-size: $fontSixteen;
  text-align: left;
}

.isPrivateAccountText {
  margin-top: 6px;
  font-family: $primaryFontFamily;
  font-size: $fontXSmall;
  color: $highlightBackground;
}

.termsLink {
  color: $primaryColor;
  cursor: pointer;
}

.horizontalLine {
  border-top: 1px solid $primaryColor;
  width: 100%;
  // height: 1px;
  opacity: 0.5;
  margin: 20px 0px;
}

:export {
  primaryColor: $primaryColor;
  light: $light;
  dark: $dark;
  primaryFontColor: $primaryFontColor;
  dividerColor: $dividerColor;
}

.profileTypesContainer {
  display: flex;
  justify-content: space-between;
  flex-direction: row;
  flex-wrap: wrap;
  width: 100%;
  :nth-child(odd) {
    margin-right: 20px;
  }
}
.profileTypes {
  padding: 14px;
  border: 1px solid $dividerColor;
  border-radius: 10px;
  flex: 1;
  min-height: 68px;
  margin-top: 16px;
  width: 130px;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  &:hover {
    cursor: pointer;
  }
}
.profileTypesSelected {
  border: solid 1px $primaryColor;
  color: $primaryColor;
  font-weight: bold;
}

// Form Styles

.formField {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: 280px;
  justify-content: space-between;
  align-items: center;
  margin-top: 10px;
  button,
  .custom {
    margin-left: 350px;
    @include xsPhoneView {
      margin-left: 0px !important;
    }
  }
}
.formFieldHalf {
  margin-top: 24px;
  display: flex;
  flex-direction: column;
  position: relative;
  div,
  input {
    width: 130px;
  }
  button,
  .backButton {
    margin-left: 45px;
    @include xsPhoneView {
      margin-left: 0px !important;
    }
  }
}
.formFieldLarge {
  margin-top: 24px;
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  flex-wrap: wrap;
  width: 280px;
  position: relative;
}

@include smTabletView {
  .profileTypes {
    width: 180px;
    min-width: 180px;
  }
  .formField {
    width: 380px;
  }
  .formFieldHalf {
    div,
    input {
      width: 180px;
    }
  }
  .formFieldLarge {
    width: 380px;
  }
}

// Loader for Buttons
.spinner {
  border: 2px solid #f3f3f3;
  border-radius: 50%;
  border-top: 2px solid transparent;
  width: 16px !important;
  height: 16px !important;
  -webkit-animation: spin 1s linear infinite; /* Safari */
  animation: spin 1s linear infinite;
}

@-webkit-keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
  }
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

// save button

.saveButton {
  height: 40px;
  border-radius: 100px;
  padding-left: 24px;
  padding-right: 24px;
  display: flex;
  justify-content: center;
  background-image: linear-gradient(
    103deg,
    $primaryColor 5%,
    $primaryDarkColor 116%
  );
  align-items: center;
  font-weight: bold;
  color: $light;
  border: 0px;
  transition-duration: 0.5s;
  transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
  min-width: 280px;
}
.saveButton:hover {
  transform: scale(1.05);
  cursor: pointer;
}

.formErrors {
  font-family: $primaryFontFamily;
  font-size: $fontXSmall;
  color: $dangerColor;
  margin-left: 6px;
  margin-top: 6px;
  max-width: 320px;
  position: absolute;
  bottom: -18px;
}

.termsError {
  font-family: $primaryFontFamily;
  font-size: $fontXSmall;
  color: $dangerColor;
}

:export {
  primaryFontColor: $primaryFontColor;
}

// for mobile view
@media only screen and (max-width: 768px) {
  .signup {
    min-height: calc(100vh - 150px);
  }
  .signUpPage {
    min-height: calc(100vh - 150px);
  }
}

